<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="@dimen/width_image"
                android:layout_height="@dimen/height_image"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margenes_default"
                android:src="@drawable/impuestos"></ImageView>
            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_below="@+id/ivLogo">

            </Space>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etUsuario"
                android:layout_margin="@dimen/margenes_default"
                android:layout_below="@+id/space"
                android:hint="@string/et_user"
                android:textSize="@dimen/text_size"
                android:textColorHint="@color/blue"
                android:textColor="@color/black"
                >

            </EditText>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etContrasena"
                android:layout_margin="@dimen/margenes_default"
                android:layout_below="@+id/etUsuario"
                android:hint="@string/et_Contrasena"
                android:textSize="@dimen/text_size"
                android:textColorHint="@color/blue"
                android:textColor="@color/black"
                android:inputType="numberPassword"
                >

            </EditText>

            <EditText
                android:id="@+id/etMonto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etContrasena"
                android:layout_marginStart="@dimen/margenes_default"
                android:layout_marginTop="@dimen/margenes_default"
                android:layout_marginEnd="@dimen/margenes_default"
                android:layout_marginBottom="@dimen/margenes_default"
                android:hint="@string/et_Monto"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/blue"
                android:textSize="@dimen/text_size"></EditText>

            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etMonto"
                android:layout_marginStart="145dp"
                android:layout_marginTop="28dp"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="@dimen/margenes_default"
                android:layout_marginBottom="@dimen/margenes_default"
                android:backgroundTint="@color/blue"
                android:text="@string/btn_ingresar"
                android:textSize="@dimen/text_size"></Button>


            <EditText
                android:id="@+id/etRetiro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnIngresar"
                android:layout_marginStart="@dimen/margenes_default"
                android:layout_marginTop="@dimen/margenes_default"
                android:layout_marginEnd="@dimen/margenes_default"
                android:layout_marginBottom="@dimen/margenes_default"
                android:hint="@string/et_RetirarDinero"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/blue"
                android:textSize="@dimen/text_size">

            </EditText>

            <Button
                android:id="@+id/btnRetirar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etRetiro"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="152dp"
                android:layout_marginTop="39dp"
                android:layout_marginEnd="@dimen/margenes_default"
                android:layout_marginBottom="@dimen/margenes_default"
                android:backgroundTint="@color/blue"
                android:text="@string/btn_retirar"
                android:textSize="@dimen/text_size"></Button>

            <TextView
                android:id="@+id/tvUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnRetirar"
                android:layout_marginStart="@dimen/margenes_default"
                android:layout_marginTop="@dimen/margenes_default"
                android:layout_marginEnd="@dimen/margenes_default"
                android:layout_marginBottom="@dimen/margenes_default"
                android:text="@string/tv_Usuario"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size">

            </TextView>

            <TextView
                android:id="@+id/tvMonto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvUsuario"
                android:layout_marginStart="@dimen/margenes_default"
                android:layout_marginTop="@dimen/margenes_default"
                android:layout_marginEnd="@dimen/margenes_default"
                android:layout_marginBottom="@dimen/margenes_default"
                android:text="@string/tv_Usuario"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size">

            </TextView>

            <Button
                android:id="@+id/btnTransaccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMonto"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/margenes_default"
                android:layout_marginTop="@dimen/margenes_default"
                android:layout_marginEnd="@dimen/margenes_default"
                android:layout_marginBottom="@dimen/margenes_default"
                android:backgroundTint="@color/blue"
                android:text="@string/btn_Transaccion"
                android:textSize="@dimen/text_size"></Button>

        </RelativeLayout>


    </ScrollView>



</RelativeLayout>